update flash banner

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -4,12 +4,12 @@
   --f7-theme-color-rgb: 80, 64, 142;
   --f7-theme-color-shade: #57346b;
   --f7-theme-color-tint: #834ea3;
-  --f7-panel-backdrop-bg-color: #0000002a;
+  --f7-panel-backdrop-bg-color: rgba(0, 0, 0, 0.39);
   --f7-link-color: auto;
-  --f7-navbar-link-color: #ffffff;
-  --f7-navbar-bg-color: #50408e;
-  --f7-navbar-text-color: #ffffff;
-  --f7-navbar-large-title-text-color: #ffffff;
+  // --f7-navbar-link-color: #ffffff;
+  // --f7-navbar-bg-color: #50408e;
+  // --f7-navbar-text-color: #ffffff;
+  // --f7-navbar-large-title-text-color: #ffffff;
   --f7-card-border-radius: 10px;
   --f7-searchbar-bg-color: #ffffff00;
   --f7-searchbar-link-color: #ffffff;
@@ -17,10 +17,10 @@
   // --f7-page-bg-color: #50408e;
 }
 .ios {
-  --f7-searchbar-bg-color-rgb: 80, 64, 142;
-  --f7-navbar-bg-color-rgb: 80, 64, 142;
-  --f7-navbar-link-color: #ffffff;
-  --f7-navbar-text-color: #ffffff;
+  // --f7-searchbar-bg-color-rgb: 80, 64, 142;
+  // --f7-navbar-bg-color-rgb: 80, 64, 142;
+  // --f7-navbar-link-color: #ffffff;
+  // --f7-navbar-text-color: #ffffff;
 }
 /* Left Panel right border when it is visible by breakpoint */
 .panel-left.panel-in-breakpoint:before {
