--- a/src/css/framework7-custom.less
+++ b/src/css/framework7-custom.less
@@ -56,7 +56,7 @@
   @import url('../../node_modules/framework7/components/typography/typography.less');
 
   @includeIosTheme: true;
-  @includeMdTheme: false;
+  @includeMdTheme: true;
   @includeAuroraTheme: false;
   @includeDarkTheme: true;
   @includeLightTheme: true;
