--- a/src/css/app.less
+++ b/src/css/app.less
@@ -8,7 +8,7 @@
   --f7-link-color: auto;
   --f7-card-border-radius: 8px;
   --f7-searchbar-bg-color: #ffffff00;
-  --f7-popup-box-shadow: none
+  --f7-popup-box-shadow: none;
 }
 
 /* Hide navbar link which opens left panel when it is visible by breakpoint */
