--- a/src/css/app.less
+++ b/src/css/app.less
@@ -1,9 +1,9 @@
 /* Custom color theme properties */
 :root {
-  --f7-theme-color: #50408e;
+  --f7-theme-color: #A1292A;
   --f7-theme-color-rgb: 80, 64, 142;
-  --f7-theme-color-shade: #57346b;
-  --f7-theme-color-tint: #834ea3;
+  --f7-theme-color-shade: #922222;
+  --f7-theme-color-tint: #c73f3f;
   --f7-panel-backdrop-bg-color: rgba(0, 0, 0, 0.39);
   --f7-link-color: auto;
   --f7-card-border-radius: 8px;
